--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -59,7 +59,7 @@
 			{{/each}}
 		</div>
 		<div class="actions-container has-actions" data-actionbartype="action" data-title="Main Actions">
-			<div class="action-element" data-type="trigger" data-set="setp" data-itemname="{{hudData.sets.active.primary.data.name}}" style="background-image: url({{hudData.sets.active.primary.data.img}})">
+			<div class="action-element primary-element" data-type="trigger" data-set="setp" data-itemname="{{hudData.sets.active.primary.data.name}}" style="background-image: url({{hudData.sets.active.primary.data.img}})">
 				<span class="action-element-title">{{hudData.sets.active.primary.data.name}}</span>
 			</div>
 			<div class="action-element-container">
