--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	<div class="action-hud">
-		<div class="features-container is-spells" data-iscontainer="true">
+		<div class="features-container is-spells" data-iscontainer="true" data-containeractiontype="actions" >
 			{{#each hudData.actions.spells}}
 			<div class="features-accordion">
 				<span class="feature-accordion-title">{{this.[0].labels.level}}</span>
@@ -44,15 +44,64 @@
 			</div>
 			{{/each}}
 		</div>
-		<div class="features-container is-consumables" data-iscontainer="true">
+		<div class="features-container is-spells" data-iscontainer="true" data-containeractiontype="bonus" >
+			{{#each hudData.bonus.spells}}
+			<div class="features-accordion">
+				<span class="feature-accordion-title">{{this.[0].labels.level}}</span>
+				<div class="features-accordion-content">
+				{{#each this}}
+					<div class="feature-element" data-type="trigger" data-itemname="{{data.name}}" style="background-image: url({{data.img}})">
+						<span class="feature-element-title">{{data.name}}</span>
+					</div>
+				{{/each}}
+				</div>
+			</div>
+			{{/each}}
+		</div>
+		<div class="features-container is-spells" data-iscontainer="true" data-containeractiontype="reactions" >
+			{{#each hudData.reactions.spells}}
+			<div class="features-accordion">
+				<span class="feature-accordion-title">{{this.[0].labels.level}}</span>
+				<div class="features-accordion-content">
+				{{#each this}}
+					<div class="feature-element" data-type="trigger" data-itemname="{{data.name}}" style="background-image: url({{data.img}})">
+						<span class="feature-element-title">{{data.name}}</span>
+					</div>
+				{{/each}}
+				</div>
+			</div>
+			{{/each}}
+		</div>
+		<div class="features-container is-consumables" data-iscontainer="true" data-containeractiontype="actions">
 			{{#each hudData.actions.consumables}}
 			<div class="feature-element has-count" data-type="trigger" data-item-count="{{data.data.quantity}}" data-itemname="{{data.name}}" style="background-image: url({{data.img}})">
 			<span class="feature-element-title">{{data.name}}</span>
 			</div>
 			{{/each}}
 		</div>
-		<div class="features-container is-powers" data-iscontainer="true">
+		<div class="features-container is-powers" data-iscontainer="true" data-containeractiontype="actions">
 			{{#each hudData.actions.special}}
+			<div class="feature-element has-count" data-type="trigger" data-item-count="{{data.data.uses.value}}" data-itemname="{{data.name}}" style="background-image: url({{data.img}})">
+			<span class="feature-element-title">{{data.name}}</span>
+			</div>
+			{{/each}}
+		</div>
+		<div class="features-container is-powers" data-iscontainer="true" data-containeractiontype="bonus">
+			{{#each hudData.bonus.special}}
+			<div class="feature-element has-count" data-type="trigger" data-item-count="{{data.data.uses.value}}" data-itemname="{{data.name}}" style="background-image: url({{data.img}})">
+			<span class="feature-element-title">{{data.name}}</span>
+			</div>
+			{{/each}}
+		</div>
+		<div class="features-container is-powers" data-iscontainer="true" data-containeractiontype="reactions">
+			{{#each hudData.reactions.special}}
+			<div class="feature-element has-count" data-type="trigger" data-item-count="{{data.data.uses.value}}" data-itemname="{{data.name}}" style="background-image: url({{data.img}})">
+			<span class="feature-element-title">{{data.name}}</span>
+			</div>
+			{{/each}}
+		</div>
+		<div class="features-container is-powers" data-iscontainer="true" data-containeractiontype="free">
+			{{#each hudData.free.special}}
 			<div class="feature-element has-count" data-type="trigger" data-item-count="{{data.data.uses.value}}" data-itemname="{{data.name}}" style="background-image: url({{data.img}})">
 			<span class="feature-element-title">{{data.name}}</span>
 			</div>
@@ -97,14 +146,32 @@
 			</div>
 		</div>
 		
-		<div class="actions-container" data-title="Reactions">
-			<div class="action-element">
-				<span class="action-element-title">Testing1</span>
+		
+		<div class="actions-container" data-title="Bonus">
+			<div class="action-element primary-element" data-type="trigger" data-set="sets" data-itemname="{{hudData.sets.active.secondary.data.name}}" style="background-image: url({{hudData.sets.active.secondary.data.img}})">
+				<span class="action-element-title">{{hudData.sets.active.secondary.data.name}}</span>
+			</div>
+			<div class="action-element" data-type="menu" data-actiontype="bonus" data-itemtype="spells" data-menu="is-spells" style="background-image: url(modules/enhancedcombathud/icons/spell-book.svg)">
+				<span class="action-element-title">Cast Spell</span>
+			</div>
+			<div class="action-element" data-type="menu" data-actiontype="bonus" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
+				<span class="action-element-title">Use Power</span>
 			</div>
 		</div>
-		<div class="actions-container" data-title="Bonus">
-			<div class="action-element bonus-action">
-				<span class="action-element-title">Testing1</span>
+		<div class="actions-container" data-title="Free">
+			<div class="action-element" data-type="menu" data-actiontype="free" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
+				<span class="action-element-title">Use Power</span>
+			</div>
+		</div>
+		<div class="actions-container" data-title="Reactions">
+			<div class="action-element primary-element" data-type="trigger" data-set="setp" data-itemname="{{hudData.sets.active.primary.data.name}}" style="background-image: url({{hudData.sets.active.primary.data.img}})">
+				<span class="action-element-title">{{hudData.sets.active.primary.data.name}}</span>
+			</div>
+			<div class="action-element" data-type="menu" data-actiontype="bonus" data-itemtype="spells" data-menu="is-spells" style="background-image: url(modules/enhancedcombathud/icons/spell-book.svg)">
+				<span class="action-element-title">Cast Spell</span>
+			</div>
+			<div class="action-element" data-type="menu" data-actiontype="bonus" data-itemtype="special" data-menu="is-powers"  style="background-image: url(modules/enhancedcombathud/icons/mighty-force.svg)">
+				<span class="action-element-title">Use Power</span>
 			</div>
 		</div>
 		<div class="actions-container" data-title="Pass">
