--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -42,6 +42,9 @@
 						<span class="feature-element-title">{{data.name}}</span>
 					</div>
 				{{/each}}
+					<div class="feature-spell-slots">
+						{{{spellSlots @key}}}
+					</div>
 				</div>
 			</div>
 			{{/each}}
