--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -7,8 +7,12 @@
     backdrop-filter: blur(6px);
     display: flex;
     flex-direction: column;
+
+    margin-right: 150px;
+
     min-height: 375px;
     min-width: 375px;
+
     padding: 1rem;
     position: relative;
     transition: all 0.3s ease-in-out;
@@ -146,4 +150,62 @@
 .weapon-set:hover > .set.set-primary:after,
 .weapon-set.active > .set.set-primary:after {
     transform: translate(-50%, 37.5px);
+}
+
+.movement-hud {
+    align-items: center;
+    backdrop-filter: blur(6px);
+    background-color: rgb(0 0 0 / 30%);
+    border: 1px solid var(--ech-border-color);
+    color: rgb(150, 150, 150);
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    height: 375px;
+    justify-content: flex-end;
+    left: 375px;
+    padding: 1rem 0rem;
+    position: absolute;
+    text-align: center;
+    top: 0px;
+    width: 150px;
+
+    pointer-events: all;
+}
+.movement-hud .movement-current,
+.movement-hud i.fas {
+    font-size: 1.8rem;
+}
+.movement-spaces {
+    align-items: center;
+    align-content: center;
+    display: flex;
+    flex-flow: wrap;
+    flex-direction: column-reverse;
+    margin-bottom: 0.5rem;
+    max-height: 287px;
+    width: 100%;
+}
+.movement-spaces .movement-space {
+    background-color: rgb(90, 190, 245);
+    border-radius: 3px;
+    box-shadow: 0px 0px 10px 0px rgb(110 210 255 / 80%);
+    height: 25px;
+    margin: 0.5rem 0.3rem;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+    max-width: 25px;
+    width: 100%;
+}
+.movement-spaces .movement-space.base-movement {
+    background-color: rgb(90, 200, 100);
+    box-shadow: 0px 0px 10px 0px rgb(110 220 120 / 80%);
+}
+.movement-spaces .movement-space.dash-movement {
+    background-color: rgb(200, 200, 90);
+    box-shadow: 0px 0px 10px 0px rgb(220 220 110 / 80%);
+}
+.movement-spaces .movement-space.danger-movement {
+    background-color: rgb(200, 95, 90);
+    box-shadow: 0px 0px 10px 0px rgb(220 115 110 / 80%);
 }
