--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -31,6 +31,17 @@
 				</span>
 		</div>
 	</div>
+	<div class="movement-hud">
+		<div class="movement-spaces">
+			<span class="movement-space"></span>
+			<span class="movement-space"></span>
+			<span class="movement-space"></span>
+			<span class="movement-space base-movement"></span>
+			<span class="movement-space dash-movement"></span>
+			<span class="movement-space danger-movement"></span>
+		</div>
+		<div class="movement-text"><span class="movement-current">6</span> <i class="fas fa-cube"></i><br/> of <span class="movement-max">6</span></div>
+	</div>
 	<div class="action-hud">
 		<div class="features-container is-spells" data-iscontainer="true" data-containeractiontype="actions" >
 			{{#each hudData.actions.spells}}
