--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 15px;
+    margin-bottom: 0.5rem;
     padding: 1rem 0.5rem;
     width: 100px;
 }
